--- a/Mybatis/src/main/resources/application.yml
+++ b/Mybatis/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
   #配置数据源
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
+    #必须加上时区
     url: jdbc:mysql://127.0.0.1:3306/genshin?serverTimezone=GMT%2B8&characterEncoding=UTF-8
     username: root
     password: root
